--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ ul, ol {
     background: gray;
     position: relative;
     display: block;
+    /*position: fixed;*/
+    top: 0;
+    left: 0;
 }
 
 #actions {
